[package]
name = "shannon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
bbqueue = "0.4.12"
toml = "0.5.8"
heapless = "0.7.0"
rand_chacha = "0.3.1"
rand = "0.8.4"

[dependencies.serde]
version = "1.0.125"
features = ["derive"]
